<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>kobuki_core</name>

  <name>openni2_camera</name>
  <version>0.3.0</version>
  <description>Drivers for the Asus Xtion and Primesense Devices. For using a kinect
  with ROS, try the <a href="http://wiki.ros.org/freenect_stack">freenect stack</a>
  </description>
  <author email="jkammerl@todo.todo">Julius Kammerl</author>
  <license>BSD</license>

  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
  <maintainer email="isaac.saito@plusonerobotics.com">Isaac I. Y. Saito</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libopenni2-dev</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
	<build_depend>rosidl_default_generators</build_depend>

  <exec_depend>libopenni2-dev</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>image_transport</exec_depend>
	<exec_depend>rosidl_default_runtime</exec_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_cmake</build_type>
	</export>

</package>

</package>
